# Rivet-PRO

./: ${CLAUDE_ENV_FILE}  .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .mcp.json  .ralph-lock  AGENTS.md  ARCHITECTURE.md  ATLAS_CMMS_CREDENTIALS.md  ATLAS_CMMS_EXTRACTION_COMPLETE.md  All telegram bots.txt  BOT_READY.md  BUGFIX_2026-01-04.md  BUILDER_AGENT_PLAN.md  Backlog.md  CLAUDE.md  CONTEXT_CLEAR_PROMPT.md  CUsershharpOneDriveDesktopRivet-PROexecution_6502.json  CUsershharpOneDriveDesktopRivet-PROrivet-pron8n-workflowscurrent_state.json  CUsershharpOneDriveDesktopRivet-PROrivet-pron8n-workflowscurrent_workflow.json  CUsershharpOneDriveDesktopRivet-PROrivet-pron8n-workflowsexecution_16.json  DATABASE_FIX_APPLIED.md  DAY1_COMPLETE.md  DAY2_DEPLOYMENT_GUIDE.md  DELIVERABLES.md  DEPLOYMENT.md  DEPLOYMENT_2026-01-09.md  DEPLOYMENT_FIXES_2026-01-05.md  DEPLOYMENT_RESUME_2026-01-05.md  DEPLOYMENT_RESUME_2026-01-05_KB_IMPLEMENTATION.md  DEPLOYMENT_STATUS_TAB1.md  DUAL_MCP_IMPLEMENTATION_COMPLETE.md  Dockerfile  END_TO_END_TEST_PLAN.md  EVERYTHING_READY.md  FEATURE1_98_PERCENT_DONE.txt  FEATURE1_COMPLETE_OVERNIGHT.md  FEATURE1_FINAL_STATUS.txt  FEATURE1_READY.md  (+257 more)
.claude/: settings.local.json
.github/: CLAUDE_SETUP.md  README.md  WORKING_CONFIG.md  pull_request_template.md
agents/: AGENT1_WORKFLOWS.md  AGENT2_MCP.md  AGENT3_HARNESS.md
backlog/: config.yml
chat-with-print-it/: .env.example  .env.production  CLAUDE_CODE_PROMPT.md  DEPLOYMENT.md  README.md  RUNBOOK.md  START_HERE.md
data/: local.db
deploy/: fly-deploy-template.ps1  fly-secrets.sh  rivet-enrichment-worker.service
docs/: ASSET_CREATION_GUIDE.md  ATLAS_CMMS_TESTING.md  BRANCHING_GUIDE.md  CADDY_CONFIG.md  CLAUDE_REFERENCE.md  CLAUDE_TESTING_PROTOCOL.md  COCKROACHDB_SETUP.md  FEATURE_FLAGS.md  FLAG_CLEANUP_CHECKLIST.md  MCP_DUAL_SETUP_GUIDE.md  MIGRATION_INVENTORY.md  N8N_WORKFLOWS.md  NETWORK_MAP.md  PRD_PHOTO_PIPELINE.md  QUICK_CONTEXT.md  README.md  RESUME_PROMPT.md  RESUME_PROMPT_2026-01-15.md  SECRETS_ROTATION_GUIDE.md  SESSION_LOG.md  TASK-9.1-Summary.md  TASK-9.2-COMPLETION.md  TASK-9.6-COMPLETION.md  TASK-9.7-Completion-Report.md  TASK-9.9-COMPLETION.md  TECHNICAL_MANUAL.md  TEMPLATE_DEVELOPMENT.md  USER_MANUAL.md  WHATSAPP_SETUP.md  YCB_V3_ARCHITECTURE.md  ralph-testing-guide.md  troubleshooting_fallback_usage.md
examples/: keyboard_builder_usage.py
fixtures/: __init__.py  abb_test_case.py
harvest_blocks/: COMPLETION_SUMMARY.md  INTEGRATION_CHECKLIST.md  README.md  harvest_1_llm_router.md  harvest_2_manufacturer_patterns.md  harvest_3_ocr_pipeline.md  harvest_4_telegram_bot.md  harvest_5_response_synthesizer.md  harvest_6_print_analyzer.md
integrations/: grashjs_client.py  telegram_cmms_example.py
migrations/: 001_ralph_schema.sql
nginx/: nginx.conf
ralph_stories/: MANUAL-001.txt  MANUAL-002.txt  MANUAL-003.txt  MANUAL-004.txt
rivet/: config.py
rivet-java/: Dockerfile  pom.xml
rivet-n8n-workflow/: .env.n8n.template  AUTO_IMPORT_GUIDE.md  FIX_N8N_VPS.md  GROQ_SEARCH_IMPLEMENTATION.md  MANUAL_HUNTER_SETUP.md  N8N_API_SETUP.md  PACKAGE_SUMMARY.md  PHOTO_BOT_V2_INTEGRATION.md  README.md  TEST_MCP.md  import_to_n8n.ps1  import_to_n8n.sh  import_workflow_final.sh  n8n_auto_import.py  ralph_main_loop_enhanced.json  ralph_main_loop_ready.json  ralph_main_loop_simple.json  ralph_main_loop_workflow.json  ralph_worker_workflow.json  rivet_node_configs.md  rivet_startup_orchestration.json  rivet_workflow.json  rivet_workflow_clean.json  rivet_workflow_diagram.md  rivet_workflow_minimal.json  rivet_workflow_required.json  setup_n8n_vps.sh  user_feedback_loop.json
rivet-pro/: .env.example  .gitignore  README.md  README_MVP.md  SETUP_GUIDE.md  main.py  requirements.txt
rivet_pro/: .env.example  .gitignore  README.md  main.py  requirements.txt  run_migrations.py  start_bot.py  test_imports.py  test_ocr_flow.py  test_setup.py  verify_structure.py
scripts/: README_MCP_SETUP.md  apply_migration.py  check_schema.py  create_knowledge_gaps.py  parse_neon_credentials.py  setup_mcp.ps1  (+24 more)
(+590 files in other folders)
