[project]
name = "ralph"
version = "1.0.0"
description = "Autonomous coding agent for task execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rivet Pro Team"}
]
keywords = ["ai", "agent", "automation", "coding", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "anthropic>=0.18.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
ralph = "bin.ralph:main"
ralph-server = "bin.ralph-server:main"

[project.urls]
Homepage = "https://github.com/Mikecranesync/Rivet-PRO"
Documentation = "https://github.com/Mikecranesync/Rivet-PRO#readme"
Repository = "https://github.com/Mikecranesync/Rivet-PRO"
Issues = "https://github.com/Mikecranesync/Rivet-PRO/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "bin*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
